// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepInfo /> should display error if contrat cdd 1`] = `
.c0 {
  margin: 1rem 0 1.6rem;
  color: #eb5757;
  font-weight: 600;
  font-size: 1.4rem;
}

<div
  class="c0"
>
  L’indemnité de licenciement n’est pas dûe pour les CDD et contrats de travail temporaires. Sous certaines conditions, le salarié peut avoir le droit à une 
  <a
    el="noopener noreferrer"
    href="/fiche-service-public/qui-peut-toucher-la-prime-de-precarite-a-la-fin-dun-contrat-de-travail"
    target="_blank"
  >
    indemnité de précarité
  </a>
  .
</div>
`;

exports[`<StepInfo /> should display error if fauteGrave 1`] = `
.c0 {
  margin: 1rem 0 1.6rem;
  color: #eb5757;
  font-weight: 600;
  font-size: 1.4rem;
}

<div
  class="c0"
>
  L’indemnité légale de licenciement n’est pas dûe en cas de faute grave.
  <br />
  Lorsqu’il est invoqué, le motif de faute grave doit apparaître précisément dans le courrier. Reportez vous à la lettre de notification de licenciement.
</div>
`;

exports[`<StepInfo /> should render 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c1 {
  display: inline-block;
  margin-left: 1rem;
  color: #eb5757;
  font-weight: 700;
}

<div>
  <form>
    <p
      class="c0"
    >
      Quel est le type de contrat ?
      <span
        aria-label="champs obligatoire"
        class="c1"
      >
        *
      </span>
    </p>
    <div
      class="c2"
    >
      <label
        class="c3"
      >
        <input
          name="contrat"
          type="radio"
          value="cdd"
        />
        <span>
          Contrat à durée determiné (CDD) ou contrat d’intérim
        </span>
      </label>
      <label
        class="c3"
      >
        <input
          name="contrat"
          type="radio"
          value="cdi"
        />
        <span>
          Contrat à durée indeterminé (CDI)
        </span>
      </label>
    </div>
    <p
      class="c0"
    >
      Le licenciement est-il dû à une faute grave ou lourde ?
      <span
        aria-label="champs obligatoire"
        class="c1"
      >
        *
      </span>
    </p>
    <div
      class="c2"
    >
      <label
        class="c3"
      >
        <input
          name="fauteGrave"
          type="radio"
          value="true"
        />
        <span>
          Oui
        </span>
      </label>
      <label
        class="c3"
      >
        <input
          name="fauteGrave"
          type="radio"
          value="false"
        />
        <span>
          Non
        </span>
      </label>
    </div>
    <p
      class="c0"
    >
      Le licenciement est-il dû à une inaptitude suite à un accident du travail ou maladie professionnelle reconnue ?
      <span
        aria-label="champs obligatoire"
        class="c1"
      >
        *
      </span>
    </p>
    <div
      class="c2"
    >
      <label
        class="c3"
      >
        <input
          name="inaptitude"
          type="radio"
          value="true"
        />
        <span>
          Oui
        </span>
      </label>
      <label
        class="c3"
      >
        <input
          name="inaptitude"
          type="radio"
          value="false"
        />
        <span>
          Non
        </span>
      </label>
    </div>
    <button
      data-testid="nextBt"
    >
      suivant
    </button>
  </form>
</div>
`;
